--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,12 @@ header {
     background: #FFFFFF;
 }
 
+@media(max-width: 500px){
+    .blockTitle{ 
+        height: 50px !important;
+    }
+}
+
 .blockTitle {
     display: block;
     letter-spacing: 3px;
@@ -47,7 +53,7 @@ header {
     display: inline-block !important;
     font-weight: 100 !important;
     width: 100%;
-    margin: 15px 0 15px 0;
+    margin: 5px 0 0px 0;
 }
 
 .logoImg {
@@ -58,37 +64,45 @@ header {
 
 .container {
     max-width: 950px;
-    max-height: 650px;
+    // max-height: 650px;
     border-radius: 13px;
     background: $color-default;
     margin-top: 10px;
+    margin-bottom: 50px;
     padding-bottom: 20px; 
     box-shadow: 0 2px 4px 0 rgba(186, 166, 166, 0.25);
 }
 
 .form {
-    margin: 15px 0 0 0;
-    padding: 15px 0 0 0;
-}
+    // margin: 15px 0 0 0;
+    padding: 5px 0 0 0;
 
-.input {
-    font-family: $font-primary;
-    font-size: 12px;
-    background: #fff;
-    border: 1px solid #D6D6D6;
-    border-radius: 3px;
-    height: 25px;
-    padding: 2px 8px;
-    outline: 0;
-    transition: 0.3s;
+    .label {
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        font-size: 12px;
+    }
 
-    &:hover {
-        border: 1px solid #858585;
-    };
+    .input {
+        font-family: $font-primary;
+        font-size: 12px;
+        background: #fff;
+        border: 1px solid #D6D6D6;
+        border-radius: 3px;
+        height: 25px;
+        padding: 2px 8px;
+        outline: 0;
+        transition: 0.3s;
 
-    &.error{
-        border: 1px solid #C11D2F; 
-    }; 
+        &:hover {
+            border: 1px solid #858585;
+        };
+
+        &.error{
+            border: 1px solid #C11D2F; 
+        }; 
+    }
 }
 
 .errorMessage{
@@ -156,4 +170,45 @@ header {
         margin-bottom: 10px;
     }
 
+}
+
+
+.ddd-width {
+    width: 40px;
+}
+
+.telefone-width {
+    width: 125px;
+}
+
+.data-width {
+    width: 120px;
+}
+
+.input_ajuste {
+    width: 300px;
+}
+
+.pt10{
+    padding-top: 10px !important;
+}
+
+.pb10{
+    padding-bottom: 10px !important;
+}
+
+.pt5{
+    padding-top: 5px !important;
+}
+
+.pb5{
+    padding-bottom: 5px !important;
+}
+
+.mb5{
+    margin-bottom: 5px !important;
+}
+
+.mt40{
+    margin-top: 40px !important;
 }
